Git_to_Salesforce/ Q-assign/objects/Assignment_Group_Member__c.object
<CustomObject>
    <description>This is second main object of Q-assign. It contains information of user to assign record, number of records already assigned, its quota limits, active records count etc.</description>
    <fields>
        <fullName>Active_Assignments__c</fullName>
        <label>Active Assignments</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Case_Assignments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Case Assignments</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Lead_Assignments__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Lead Assignments</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Load__c</fullName>
        <label>Active Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assignment_Group__c</fullName>
        <description>Assignment group id</description>
        <label>Assignment Group</label>
        <referenceTo>Assignment_Group__c</referenceTo>
        <relationshipName>Assignment_Group_Members</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Assignment_Quota__c</fullName>
        <description>If set, this overrides the Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period via this
Assignment Group</description>
        <inlineHelpText>If set, this overrides the Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period via this
Assignment Group</inlineHelpText>
        <label>Assignment Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Quota_Assigned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Case Quota Assigned</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Assignment_Quota__c</fullName>
        <description>If set, this overrides the Global Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period across all
Assignment Groups for the specified object type</description>
        <inlineHelpText>If set, this overrides the Global Assignment Quota for this
Assignment Group. Specifies the maximum number of records
allowed to be assigned to this user in the Quota Period across all
Assignment Groups for the specified object type</inlineHelpText>
        <label>Global Assignment Quota</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Assignment_Seq__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Last Assignment Seq</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Assignment__c</fullName>
        <description>Last assignment</description>
        <label>Last Assignment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Quota_Assigned__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Quota Assigned</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Assignment_Cap__c</fullName>
        <description>If set, this overrides the Max Assignment Cap for this
Assignment Group. Specifies the maximum number of Active
records for the user, above which, no more records will be
assigned by this Assignment Group to this user</description>
        <inlineHelpText>If set, this overrides the Max Assignment Cap for this
Assignment Group. Specifies the maximum number of Active
records for the user, above which, no more records will be
assigned by this Assignment Group to this user</inlineHelpText>
        <label>Max Assignment Cap</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Assignment_Points_Cap__c</fullName>
        <description>If set, this overrides the Max Assignment Points Cap for
this Assignment Group. Specifies the maximum number of Load
Points of Active records for the user, above which, no more
records will be assigned by this Assignment Group to this user</description>
        <inlineHelpText>If set, this overrides the Max Assignment Points Cap for
this Assignment Group. Specifies the maximum number of Load
Points of Active records for the user, above which, no more
records will be assigned by this Assignment Group to this user</inlineHelpText>
        <label>Max Assignment Points Cap</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Assignment_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Next Assignment Order</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Type__c</fullName>
        <description>Owner type</description>
        <label>Owner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Queue__c</fullName>
        <description>Queue to assign to</description>
        <label>Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Assigned__c</fullName>
        <label>Quota Assigned</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Weighting_Accumulation__c</fullName>
        <label>Round Robin Weighting Accumulation</label>
        <precision>10</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Round_Robin_Weighting__c</fullName>
        <description>When using Round-Robin mode, this setting specifies if
the user should get more or less records assigned compared to
other users/members. 100% is the default. e.g. a setting of
110% would mean that this user would get an extra record for
every 10 records assigned to other users that have 100% set</description>
        <label>Round Robin Weighting</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User to assign to</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_Group_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>QA Assignment Group Member</label>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Assignment Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>